--- a/pages/index.html
+++ b/pages/index.html
@@ -1,85 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Homepage</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <style>
-            .header{
-                background-color: darkred;
-            }
-            .content{
-                height: 94vh;
-            }
-            .logo{
-                padding:1%;
-                margin: 2%;
-                font-family: Arial, sans-serif;
-                font-weight:bolder;
-                font-size: large;
-                background-color: #dbdfe5;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 10px;
-            }
-            .ads-space{
-                background-color: slategray;
-            }
-            .trips{
-                background-color: #dbdfe5;
-            }
-            .searchbar{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                color: #242526;
-                background-color: #f0f0f5;
-                border-radius: 15px;
-                border: 2px solid #242526;
-                margin: 5px 5px 0 5px;
-                padding-left: 10px;
-            }
-            .test{
-                background-color: black;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container-fluid header">
-            <div class="row">
-                <div class="col-sm-3 ">
-                    <div class="container logo">
-                        CAMPUS MEETUPS
-                    </div>
-                </div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-3">
-                    <div className="searchbar">
-                        <input type="text" class="search-input" />
-                        <SearchIcon />
-                    </div>
-                </div>
-                <div class="col-sm-2">d</div>
-            </div>
-          </div>
+<head>
+    <title>Homepage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .header {
+            background-color: darkred;
+        }
 
-        <div class="container-fluid">
-            <div class="row content">
-                <div class="col-sm-1 ads-space">ads</div>
-                <div class="col-sm-10 trips">
-                    <div class="row">
-                        <div class="col-xs-3 test"></div>
-                        <!-- <div class="col-sm-3"></div>
-                        <div class="col-sm-3 test"></div>
-                        <div class="col-sm-3"></div> -->
-                    </div>
+        .content {
+            height: 94vh;
+        }
+
+        .logo {
+            padding: 1%;
+            margin: 2%;
+            font-family: Arial, sans-serif;
+            font-weight: bolder;
+            font-size: large;
+            background-color: #dbdfe5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+        }
+
+        .ads-space {
+            background-color: slategray;
+            padding: 10px;
+        }
+
+        .ad-image {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        .trips {
+            background-color: #dbdfe5;
+            padding: 20px;
+        }
+
+        .trip-block {
+            background-color: white;
+            border-radius: 10px;
+            margin: 5px;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+            .trip-block h5 {
+                font-size: 1.2rem;
+            }
+
+            .trip-block p {
+                font-size: 0.9rem;
+                margin-bottom: 2px;
+            }
+
+        .join-button {
+            background-color: lightgrey;
+            border: none;
+            color: black;
+            font-size: 1rem;
+            padding: 10px 20px;
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+        }
+
+            .join-button:hover {
+                background-color: darkgrey;
+            }
+
+        .create-button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            margin-left: 10px;
+        }
+
+            .create-button:hover {
+                background-color: #45a049;
+            }
+
+        .searchbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            color: #242526;
+            background-color: #f0f0f5;
+            border-radius: 15px;
+            border: 2px solid #242526;
+            margin: 5px 5px 0 5px;
+            padding-left: 10px;
+        }
+
+        .notification-icon, .profile-icon, .menu-icon {
+            font-size: 1.5rem;
+            color: white;
+            margin-left: 15px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="container-fluid header">
+        <div class="row">
+            <div class="col-sm-3 d-flex justify-content-center align-items-center">
+                <div class="logo">
+                    <img src="images/logo.png" alt="Campus Meetups" class="img-fluid" width="200" />
                 </div>
-                <div class="col-sm-1 ads-space">ads</div> 
+            </div>
+            <div class="col-sm-4 d-flex align-items-center">
+                <div class="searchbar">
+                    <input type="text" class="search-input" placeholder="Search trips..." />
+                    <button class="btn btn-outline-secondary">Search</button>
+                </div>
+            </div>
+            <div class="col-sm-5 text-end">
+                <button class="create-button">Create a Trip</button>
+                <span class="notification-icon">🔔</span>
+                <span class="profile-icon">👤</span>
+                <span class="menu-icon">☰</span>
             </div>
         </div>
-    </body>
-</html>                                		
+    </div>
+
+    <div class="container-fluid">
+        <div class="row content">
+            <div class="col-sm-1 ads-space">
+                
+            </div>
+            <div class="col-sm-10 trips">
+                <h2 class="text-center" style="font-size: 2.5rem; font-weight: bold;">Trips to Join</h2>
+                <div class="row">
+                    <!-- Trip 1 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 1" class="img-fluid" />
+                            <h5> One Space Neddle Trip </h5>
+                            <p><strong>Description:</strong> This is the first trip created.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> Seattle, Washington</p>
+                            <p><strong>Date:</strong> 2024-10-24</p>
+                            <p><strong>Organizer ID:</strong> student1</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                    <!-- Trip 2 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 2" class="img-fluid" />
+                            <h5>Trip 2</h5>
+                            <p><strong>Description:</strong> A scenic walk in the national park.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> Portland, Oregon</p>
+                            <p><strong>Date:</strong> 2024-10-30</p>
+                            <p><strong>Organizer ID:</strong> student2</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                    <!-- Trip 3 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 3" class="img-fluid" />
+                            <h5>Trip 3</h5>
+                            <p><strong>Description:</strong> Discover the beauty of the mountains.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> Mount Rainier, Washington</p>
+                            <p><strong>Date:</strong> 2024-11-05</p>
+                            <p><strong>Organizer ID:</strong> student3</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                    <!-- Trip 4 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 4" class="img-fluid" />
+                            <h5>Trip 4</h5>
+                            <p><strong>Description:</strong> A relaxing weekend at the beach.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> Cannon Beach, Oregon</p>
+                            <p><strong>Date:</strong> 2024-11-12</p>
+                            <p><strong>Organizer ID:</strong> student4</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                    <!-- Trip 5 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 5" class="img-fluid" />
+                            <h5>Trip 5</h5>
+                            <p><strong>Description:</strong> Experience the city nightlife.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> San Francisco, California</p>
+                            <p><strong>Date:</strong> 2024-11-19</p>
+                            <p><strong>Organizer ID:</strong> student5</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                    <!-- Trip 6 -->
+                    <div class="col-md-4">
+                        <div class="trip-block">
+                            <img src="images/seattle.jpeg" alt="Trip 6" class="img-fluid" />
+                            <h5>Trip 6</h5>
+                            <p><strong>Description:</strong> Cultural exploration of the city.</p>
+                            <p><strong>Status:</strong> CREATED</p>
+                            <p><strong>Location:</strong> New York City, New York</p>
+                            <p><strong>Date:</strong> 2024-11-26</p>
+                            <p><strong>Organizer ID:</strong> student6</p>
+                            <button class="join-button">Join</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-1 ads-space">
+            
+            </div>
+        </div>
+    </div>
+</body>
+</html>
