Added trips in static html

--- a/pages/index.html
+++ b/pages/index.html
@@ -140,8 +140,13 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-1 ads-space">
+                <img src="https://your-ad-image-link.com/ad.jpg" alt="Advertisement" class="ad-image" />
+            </a>
                 
             </div>
+
+
+
             <div class="col-sm-10 trips">
                 <h2 class="text-center" style="font-size: 2.5rem; font-weight: bold;">Trips to Join</h2>
                 <div class="row">
@@ -149,9 +154,9 @@
                     <div class="col-md-4">
                         <div class="trip-block">
                             <img src="images/seattle.jpeg" alt="Trip 1" class="img-fluid" />
-                            <h5> One Space Neddle Trip </h5>
-                            <p><strong>Description:</strong> This is the first trip created.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <h5> Space Neddle Trip </h5>
+                            <p>This is the first trip created.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> Seattle, Washington</p>
                             <p><strong>Date:</strong> 2024-10-24</p>
                             <p><strong>Organizer ID:</strong> student1</p>
@@ -161,10 +166,10 @@
                     <!-- Trip 2 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 2" class="img-fluid" />
-                            <h5>Trip 2</h5>
-                            <p><strong>Description:</strong> A scenic walk in the national park.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <img src="images/Mt_Rainier_np.webp" alt="Trip 2" class="img-fluid" />
+                            <h5>Mount Rainier National Park</h5>
+                            <p> A scenic walk in the national park.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> Portland, Oregon</p>
                             <p><strong>Date:</strong> 2024-10-30</p>
                             <p><strong>Organizer ID:</strong> student2</p>
@@ -174,10 +179,10 @@
                     <!-- Trip 3 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 3" class="img-fluid" />
-                            <h5>Trip 3</h5>
-                            <p><strong>Description:</strong> Discover the beauty of the mountains.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <img src="images/Mt_baker.jpg" alt="Trip 3" class="img-fluid" />
+                            <h5>Mount Baker</h5>
+                            <p> Discover the beauty of the mountains.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> Mount Rainier, Washington</p>
                             <p><strong>Date:</strong> 2024-11-05</p>
                             <p><strong>Organizer ID:</strong> student3</p>
@@ -187,10 +192,10 @@
                     <!-- Trip 4 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 4" class="img-fluid" />
-                            <h5>Trip 4</h5>
-                            <p><strong>Description:</strong> A relaxing weekend at the beach.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <img src="images/alki_beach.jpg" alt="Trip 4" class="img-fluid" />
+                            <h5>Alki Beach</h5>
+                            <p> A relaxing weekend at the beach.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> Cannon Beach, Oregon</p>
                             <p><strong>Date:</strong> 2024-11-12</p>
                             <p><strong>Organizer ID:</strong> student4</p>
@@ -200,10 +205,10 @@
                     <!-- Trip 5 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 5" class="img-fluid" />
-                            <h5>Trip 5</h5>
-                            <p><strong>Description:</strong> Experience the city nightlife.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <img src="images/seattle_downtown.jpg" alt="Trip 5" class="img-fluid" />
+                            <h5>Seattle Downtown</h5>
+                            <p> Experience the city nightlife.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> San Francisco, California</p>
                             <p><strong>Date:</strong> 2024-11-19</p>
                             <p><strong>Organizer ID:</strong> student5</p>
@@ -213,10 +218,10 @@
                     <!-- Trip 6 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 6" class="img-fluid" />
-                            <h5>Trip 6</h5>
-                            <p><strong>Description:</strong> Cultural exploration of the city.</p>
-                            <p><strong>Status:</strong> CREATED</p>
+                            <img src="images/museum_pop.jpg" alt="Trip 6" class="img-fluid" />
+                            <h5>Museum of Pop Culture</h5>
+                            <p>Cultural exploration of the city.</p>
+                            <p><strong>Status:</strong> Ongoing </p>
                             <p><strong>Location:</strong> New York City, New York</p>
                             <p><strong>Date:</strong> 2024-11-26</p>
                             <p><strong>Organizer ID:</strong> student6</p>
