--- a/pages/index.html
+++ b/pages/index.html
@@ -140,7 +140,9 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-1 ads-space">
-                
+                <img src="images/Advertisement.jpg" alt="Advertisement" class="ad-image" />
+            </a>
+
             </div>
             <div class="col-sm-10 trips">
                 <h2 class="text-center" style="font-size: 2.5rem; font-weight: bold;">Trips to Join</h2>
@@ -148,7 +150,7 @@
                     <!-- Trip 1 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 1" class="img-fluid" />
+                            <img src="images/seattle.jpeg" alt="Trip 1" class="img-fluid" alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;"  />
                             <h5> One Space Neddle Trip </h5>
                             <p><strong>Description:</strong> This is the first trip created.</p>
                             <p><strong>Status:</strong> CREATED</p>
@@ -161,7 +163,7 @@
                     <!-- Trip 2 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 2" class="img-fluid" />
+                            <img src="images/Mt_Rainier_np.jpeg" alt="Trip 2" class="img-fluid"alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;" />
                             <h5>Trip 2</h5>
                             <p><strong>Description:</strong> A scenic walk in the national park.</p>
                             <p><strong>Status:</strong> CREATED</p>
@@ -174,7 +176,7 @@
                     <!-- Trip 3 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 3" class="img-fluid" />
+                            <img src="images/Mt_baker.webp" alt="Trip 3" class="img-fluid" alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;" />
                             <h5>Trip 3</h5>
                             <p><strong>Description:</strong> Discover the beauty of the mountains.</p>
                             <p><strong>Status:</strong> CREATED</p>
@@ -187,7 +189,7 @@
                     <!-- Trip 4 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 4" class="img-fluid" />
+                            <img src="images/alki_beach.jpg" alt="Trip 4" class="img-fluid" alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;" />
                             <h5>Trip 4</h5>
                             <p><strong>Description:</strong> A relaxing weekend at the beach.</p>
                             <p><strong>Status:</strong> CREATED</p>
@@ -200,7 +202,7 @@
                     <!-- Trip 5 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 5" class="img-fluid" />
+                            <img src="images/seattle_downtown.jpg" alt="Trip 5" class="img-fluid" alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;" />
                             <h5>Trip 5</h5>
                             <p><strong>Description:</strong> Experience the city nightlife.</p>
                             <p><strong>Status:</strong> CREATED</p>
@@ -213,7 +215,7 @@
                     <!-- Trip 6 -->
                     <div class="col-md-4">
                         <div class="trip-block">
-                            <img src="images/seattle.jpeg" alt="Trip 6" class="img-fluid" />
+                            <img src="images/museum_pop.jpg" alt="Trip 6" class="img-fluid" alt="Trip 1" class="img-fluid" width="100%" height="200" style="object-fit: cover;" />
                             <h5>Trip 6</h5>
                             <p><strong>Description:</strong> Cultural exploration of the city.</p>
                             <p><strong>Status:</strong> CREATED</p>
